# cpp-ssg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
include/: FileManager.hpp  Generator.hpp  Markdown.hpp
src/: FileManager.cpp  Generator.cpp
